--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <img src="./scissors.png"  class="scissoremoji" >
     Scissor</button>
 
-    <p class="moves"> Your Move is .......... and Computer Move is ..........</p>
+    <p class="moves">Pick Your Move </p>
     
     <p class="result"></p>
 
